--- a/4.NUMBERS.ipynb
+++ b/4.NUMBERS.ipynb
@@ -9,25 +9,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the string:sAmUEl\n",
-      "String in upper case SAMUEL\n",
-      "String in lower case samuel\n"
+      "Input radians: 10\n",
+      "572.9577951308232\n"
      ]
     }
    ],
    "source": [
-    "#program to input and returns string in upper and lower cases\n",
-    "str=input(\"Enter the string:\")\n",
-    "print(\"String in upper case\",str.upper())\n",
-    "print(\"String in lower case\",str.lower())"
+    "#program to convert radian to degree\n",
+    "import math      #imports math function    \n",
+    "radian = float(input(\"Input radians: \")) #to input value in radian\n",
+    "degree = radian*(180/math.pi)            #converts to degree\n",
+    "print(degree)                             #diaplays the degree"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter value of a : 2\n",
+      "Enter value of b : 6\n",
+      "Enter value of c : 1\n",
+      "Discriminant : 28\n"
+     ]
+    }
+   ],
+   "source": [
+    "#program to find discriminant\n",
+    "a,b,c=int(input(\"Enter value of a : \")),int(input(\"Enter value of b : \")),int(input(\"Enter value of c : \")) #to input values\n",
+    "print(\"Discriminant :\",(b**2-4*a*c)) #displays after calculation\n"
+   ]
   },
   {
    "cell_type": "code",
