--- a/6.LIST.ipynb
+++ b/6.LIST.ipynb
@@ -16,9 +16,9 @@
    ],
    "source": [
     "#program which accept sequence of comma seperated numbers from user\n",
-    "num=input(\"Enter some numbers seperated by comma\") \n",
-    "list=num.split(',')                      \n",
-    "print(\"list is\",list)"
+    "num=input(\"Enter some numbers seperated by comma\") #to enter numbers\n",
+    "list=num.split(',')                                #splits the number and stores in list wherever comma comes \n",
+    "print(\"list is\",list)                              #displays the list"
    ]
   },
   {
@@ -37,9 +37,9 @@
    ],
    "source": [
     "#program to accept a filename from the user,print extension of that\n",
-    "file=input(\"Enter file name with extension:\")\n",
-    "ext=file.split(\".\")\n",
-    "print(\"Extension of file is:\",ext[-1:])"
+    "file=input(\"Enter file name with extension:\")  #inputs the file with extension\n",
+    "ext=file.split(\".\")                            #splits the file name and extension wherever '.' comes and stores in ext\n",
+    "print(\"Extension of file is:\",ext[-1:])        #displays the last string in the ext"
    ]
   },
   {
@@ -60,11 +60,11 @@
    ],
    "source": [
     "#program to display first and last colors of a colors list\n",
-    "list=input(\"Enter the colors seperated by comma\")\n",
-    "col=list.split(',')\n",
-    "print(\"color list:\",col)\n",
-    "print(\"first color in the list is:\",col[0])\n",
-    "print(\"second color in the list is:\",col[-1])"
+    "list=input(\"Enter the colors seperated by comma\") #to input various colors \n",
+    "col=list.split(',')                               #splits the list wherever coma is encountered and stores in col \n",
+    "print(\"color list:\",col)                          #displays the entered colors \n",
+    "print(\"first color in the list is:\",col[0])       #displays first color\n",
+    "print(\"second color in the list is:\",col[-1])     #displays the last color"
    ]
   },
   {
@@ -83,11 +83,11 @@
    ],
    "source": [
     "#program to get string from user and all occurences of its first char except the first char changed to $\n",
-    "str=input(\"Enter the string:\")\n",
-    "f=str[0]\n",
-    "c=str[1:]\n",
-    "r=f+c.replace(f,\"$\")\n",
-    "print(\"new string is:\",r)"
+    "str=input(\"Enter the string:\")   #to enter the string\n",
+    "f=str[0]                         #to store the first character of string\n",
+    "c=str[1:]                        #to store remaining charcters except first characters in c\n",
+    "r=f+c.replace(f,\"$\")             #replaces first character with $ in c and concanate with f\n",
+    "print(\"new string is:\",r)        #displays the new string"
    ]
   },
   {
