--- a/exercise 10.ipynb
+++ b/exercise 10.ipynb
@@ -187,13 +187,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "-------OUTPUT------\n",
       "\n",
       "*\n",
       "**\n",
