--- a/EXERCISE 22.ipynb
+++ b/EXERCISE 22.ipynb
@@ -107,14 +107,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the name of filefile1.txt\n",
+      "Enter the name of file file1.txt\n",
       "THIS IS FIRST SENTENCE\n",
       "THIS IS SECOND SENTENCE\n",
       "\n"
@@ -122,8 +122,8 @@
     }
    ],
    "source": [
-    "#program to read a file line by line stored in a list\n",
-    "file=input(\"Enter the name of file\")\n",
+    "#program to read a file line by line and store it in a list\n",
+    "file=input(\"Enter the name of file \")\n",
     "f=open(file,\"r\")\n",
     "line=f.read()\n",
     "lines=line.split(\"\\n\")\n",
